styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
      font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
    
}

.display-flex{
    display: flex;
    margin: 0 auto;
}
.primary-font{
    font-size:3.8rem ;
    font-weight:800 ;
    color: white;
}
.secondary-font{
    font-size:3rem ;
    font-weight:700 ;
    color: white;
}
.third-font{
    font-size:2rem ;
    font-weight:700 ;
    color: white;
}
.fourth-font{
    font-size:1.5rem ;
    font-weight:700 ;
    color: white;
}
.manu-description{
     font-size:1rem ;
    font-weight:500 ;
    color: white;
}
.universal-description{
     font-size:1rem ;
    font-weight:400 ;
    color: #cdced0

}
.primary-btn {
  padding: 14px 32px;
  font-size: 18px;
  font-weight: 600;
  color: white;
  border: none;
  border-radius: 30px;
  cursor: pointer;
  background: linear-gradient(
    270deg,
    #03bbed,
    #ff15ef,
    #fff700
  );

  background-size: 600% 600%;
  animation: gradientMove  4s ease infinite;

  transition: transform 0.2s ease, box-shadow 0.2s ease;
}

.primary-btn:hover {
  transform: scale(1.05);
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
}

@keyframes gradientMove {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}
.primary-btn::after {
  content: "";
  position: absolute;
  inset: -3px;
  border-radius: 40px;

  background: linear-gradient(135deg, #00ff9d, #00c3ff, #ff3cac);
  z-index: -1;
  filter: blur(0.2px);
  opacity: 0.9;
}
.btn2:hover{
 
  
  border-radius: 40px;

  background: linear-gradient(135deg, #00ff9d, #00c3ff, #ff3cac);

  filter: blur(0.2px);
  opacity: 0.9
}
.btn2{
 background-color:transparent;
 border: 1px solid rgb(17, 138, 8);
padding: 14px 32px;
 border-radius: 30px;
}
nav{
    padding: 10px 0px 10px ;
    background-color: #1A0B2E;
    
    justify-content: space-around;
    align-items: center;
    
    

}
.hamburger {
  display: block;
}
.manu ul{
     display: flex;
    list-style: none;
    gap: 20px;
    
}

.logo-lastpart{
    background: linear-gradient(270deg, #9907c6, #ff15ef, #fff700);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.brand{
    background-image: url(./assets/hero-bg.png);
   background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height:760px;
  display: flex;
  flex-direction: column;
  align-items: center;      /* horizontal center */
  justify-content: center;  /* vertical center */
  text-align: center;
}
.brand h1{
  padding-top: 40px;
  padding-bottom: 9px;
}
.brand-img{
    background-image: url(./assets/hero-circle.png);background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  width: 350px;
  height: 350px;
  display: flex;
  align-items: center;
  justify-content: center;
position: relative;
}
.new{
  position: absolute;
  background-color: #2ee98c;
  padding: 5px 15px;
  border-radius: 20px;
   z-index: 10;
  box-shadow: 0px 1px 15px rgb(8, 78, 217);
 
  right: 0px;
  top:0px;
  top:20px;
  right: 20px;
  font-size: 1.1rem;
  font-weight: 600;

  
}
.btn{
    display: flex;
    gap: 20px;
    margin-top: 24px;
    margin-bottom: 100px;
}
.About{
background-color: #230E3D;
}
.about-info , .seclection-info{
max-width: 1200px;
margin: 0 auto;
text-align: center;
padding-top: 80px;
padding-bottom: 120px;

}
.about-info h2{
  padding-bottom: 20px;
}
.about-info p{
  line-height: 20px;
}

.total{
  margin-top: 100px;
  margin-bottom: 40px;
  justify-content: space-between;
  align-content: center;
}
.seclection{

 background-color: #230E3D;
}
.seclection-info{
max-width: 1200px;
margin: 0 auto;
text-align: center;
padding-top: 40px;
padding-bottom: 40px;

}
.seclection-info h2{
  padding-bottom: 40px;
}
.box{
  display: grid;
  grid-template-columns: repeat(3,1fr);
  gap: 30px;
  padding-bottom: 120px;

}
.box-card{
  background-color: rgba(34, 7, 69, 0.923);
  text-align: left;
  border-radius: 40px;
}
.box-card img{
  max-width: 50px;
  padding-bottom: 16px;
}
.box-card p{
  padding-top: 16px;
}
.card1{
  padding: 50px 25px;

}

#grid-cols{
  grid-column: span 2;
  padding: 30px 25px;
}
#grid-row{
  grid-row: span 2;
  padding: 150px 15px;
  
}
.feature{
  background-color: #1A0B2E;
  padding: 100px 0px 50px;
}

.feature h2 {
  margin-bottom: 50px;
  text-align: center;
}

.podcast {
  display: flex;
  justify-content: center;
  gap: 30px;
  max-width: 1200px;
  margin: 0 auto;
}
.podcast-info h3{
  padding: 10px 0px;
}
.podcast-info p{
padding: 10px 0px;
}
.podcast-info img{
padding: 10px 0px;
}

.podcast-series {
  background-color: #2a0f3f;
  border-radius: 18px;
  width: 100%;
  max-width: 380px;
  color: #ffffff;
}
.podcast-info{
  padding: 15px;
}

.podcast-series iframe {
  width: 380px;
  height: 215px;
  border-radius: 16px 16px 0 0;
 
}


.podcast-series img {
  width: 16px;
  vertical-align: middle;
  margin-right: 6px;
}

.podcast-series span {
  font-size: 13px;
  color: #2ee98c;
}
.host{
  text-align: center;
  background-color: #1A0B2E;
  padding: 100px 0px 120px;

}
.host h2{
padding-bottom: 40px;
}
.host-img{
  margin: 20px 0px 20px 20px;
}
.about-host{
  display: flex;
  gap: 50px;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
  text-align: left;
   background-color: #311546;
  border-radius: 18px;
}
.host-social{
  display: flex;
  gap: 20px;
padding-top: 10px;

  
}
.host-social img{
  max-width: 200px;
  height: 40px;
  padding: 10px;
   border: 1px solid #b994d5 ;
   border-radius: 18px;
   

}
footer{
  background-image: url(./assets/footer-bg.png);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
.footer{
  text-align: center;
  padding: 70px;
  max-width: 750px;
  margin: 0 auto;
}
.footer h1{
padding-bottom: 16px;
}
.social{
  display: flex;
  gap: 20px;
  justify-content: center;
  padding-bottom: 30px;
}

.social-icon{
  display: flex;
  gap: 10px;
 
}
.social-icon img{
  max-width: 20px;
}





@media screen and (max-width:576px) {
  .manu, .btn1{
    display: none;
   
  }
  .total{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap:20px
  }
  .box {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap:20px;
  }
  #grid-row{
    padding: 20px;
  }
  .podcast {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
  gap:20px;
  justify-items: center;
  }
  .about-host{
    display: block;
    justify-items: center;
    margin-left: 20px;
     margin-right: 20px;
     padding: 20px;
     text-align: center;
  }
  .host-social{
    justify-content: center;
  }
  .social{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
    

  
}
}
@media screen and (min-width:576px) and (max-width:992px) {
 .hamburger{
  display: none;
}


}
@media screen and (min-width:992px){
 
.hamburger{
  display: none;
}
}

